[package]
name = "reredis"
version = "0.1.0"
authors = ["Jonathan <jofr@spreadshirt.net>"]
edition = "2018"

[dependencies]
runtime = { version = "0.3.0-alpha.4", optional = true }
futures-preview = { version = "0.3.0-alpha.16", optional = true }

[dev-dependencies]
quickcheck = "0.8.3"
quickcheck_macros = "0.8.0"
rand = "0.6.5"
tempfile = "3.0.8"
lazy_static = "1.3.0"

[features]
default = ["sync-client"]
sync-client = []
async-client = ["runtime", "futures-preview"]
